dark mode icon fixed

--- a/src/components/HomepageLinksSection/styles.module.css
+++ b/src/components/HomepageLinksSection/styles.module.css
@@ -46,10 +46,8 @@
   transform: translateY(-50%);
 }
 
-[data-theme='dark'] {
-  .docsLink::after {
-    filter: invert(90%) brightness(120%);
-  }
+[data-theme='dark'] .docsLink::after {
+  filter: invert(90%) brightness(120%);
 }
 
 .emoji {
